# lqx

./: .gitignore  CMakeLists.txt  README.md  lqx.code-workspace  websocketclient.py
project/: CMakeLists.txt
project/common/: PlayerDefine.hpp
project/database/: CMakeLists.txt  Define.hpp  README.txt  config.ini  main.cc  main.go
project/database/databaseclient/: DatabaseClient.hpp
project/database/dbhelper/: MySqlClient.cc  MySqlClient.hpp
project/database/module/: ArgsOptions.cc  ArgsOptions.hpp  Config.cc  Config.hpp  DatabaseService.cc  DatabaseService.hpp  MonitorClient.cc  MonitorClient.hpp
project/database/src/: config.go  watchdog.go
project/database/test/: CMakeLists.txt  test_database.cc
project/gateway/: CMakeLists.txt  Define.hpp  config.ini  main.cc
project/gateway/module/: ArgsOptions.cc  ArgsOptions.hpp  GatewayService.cc  GatewayService.hpp  InternalConnMgr.hpp  PlayerProxy.cc  PlayerProxy.hpp  PlayerProxyConfig.cc  PlayerProxyConfig.hpp
project/gateway/sceneclient/: SceneClient.cc  SceneClient.hpp  SceneClientConfig.cc  SceneClientConfig.hpp
project/monitor/: CMakeLists.txt  Define.hpp  config.ini  main.cc
project/monitor/module/: ArgsOptions.cc  ArgsOptions.hpp  Config.cc  Config.hpp  MonitorConfig.cc  MonitorConfig.hpp  MonitorManager.cc  MonitorManager.hpp  MonitorServer.cc  MonitorServer.hpp  MonitorService.cc  MonitorService.hpp  Service.cc  Service.hpp
project/monitor/monitorclient/: MonitorClient.cc  MonitorClient.hpp  MonitorClientConfig.cc  MonitorClientConfig.hpp  MonitorProtocols.hpp
project/monitor/src/: ArgsOptions.cc  ArgsOptions.hpp  Define.hpp
project/protocol/: Define.hpp  MonitorProtocols.hpp  Protocol.hpp  SceneProtocols.hpp
project/scene/: CMakeLists.txt  config.ini  main.cc
project/scene/module/: Define.hpp  SceneConfig.cc  SceneConfig.hpp  SceneServer.cc  SceneServer.hpp  SceneService.cc  SceneService.hpp
project/scene/module/world/: WorldScene.cc  WorldScene.hpp
project/scenemanager/: CMakeLists.txt  config.ini  main.cc
shell/: clear.sh  launch.sh
